criando método array

--- a/estrutura-dados-csharp/estrutura-dados-csharp/estrutura-dados-csharp.csproj
+++ b/estrutura-dados-csharp/estrutura-dados-csharp/estrutura-dados-csharp.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="2- Estrutura de Dados avançado\" />
+    <Folder Include="2- Avançado\" />
   </ItemGroup>
 
 </Project>
