modified:   .vs/estrutura-dados-csharp/DesignTimeBuild/.dtbcache.v2 	modified:   .vs/estrutura-dados-csharp/v16/.suo 	new file:   "estrutura-dados-csharp/1- Introdu\303\247\303\243o/Arvores/Arvores.cs" 	new file:   "estrutura-dados-csharp/1- Introdu\303\247\303\243o/Filas/Filas.cs" 	new file:   "estrutura-dados-csharp/1- Introdu\303\247\303\243o/Pilhas/Pilhas.cs" 	modified:   "estrutura-dados-csharp/1- Introdu\303\247\303\243o/Vetores/Vetor.cs" 	modified:   estrutura-dados-csharp/Program.cs 	modified:   estrutura-dados-csharp/bin/Debug/netcoreapp3.1/estrutura-dados-csharp.dll 	modified:   estrutura-dados-csharp/bin/Debug/netcoreapp3.1/estrutura-dados-csharp.pdb 	modified:   estrutura-dados-csharp/bin/Debug/netcoreapp3.1/estrutura-dados-csharp.runtimeconfig.dev.json 	modified:   estrutura-dados-csharp/estrutura-dados-csharp.csproj 	modified:   estrutura-dados-csharp/obj/Debug/netcoreapp3.1/estrutura-dados-csharp.assets.cache 	modified:   estrutura-dados-csharp/obj/Debug/netcoreapp3.1/estrutura-dados-csharp.csproj.CoreCompileInputs.cache 	modified:   estrutura-dados-csharp/obj/Debug/netcoreapp3.1/estrutura-dados-csharp.csprojAssemblyReference.cache 	modified:   estrutura-dados-csharp/obj/Debug/netcoreapp3.1/estrutura-dados-csharp.dll 	modified:   estrutura-dados-csharp/obj/Debug/netcoreapp3.1/estrutura-dados-csharp.genruntimeconfig.cache 	modified:   estrutura-dados-csharp/obj/Debug/netcoreapp3.1/estrutura-dados-csharp.pdb 	modified:   estrutura-dados-csharp/obj/estrutura-dados-csharp.csproj.nuget.dgspec.json 	modified:   estrutura-dados-csharp/obj/estrutura-dados-csharp.csproj.nuget.g.props 	modified:   estrutura-dados-csharp/obj/project.assets.json 	modified:   estrutura-dados-csharp/obj/project.nuget.cache

--- a/estrutura-dados-csharp/estrutura-dados-csharp/estrutura-dados-csharp.csproj
+++ b/estrutura-dados-csharp/estrutura-dados-csharp/estrutura-dados-csharp.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="2- Avançado\" />
+    <Folder Include="2- Avançado\Merge Sort\" />
+    <Folder Include="2- Avançado\BigO\" />
+    <Folder Include="2- Avançado\Dijkstra\" />
+    <Folder Include="2- Avançado\Grafos\" />
+    <Folder Include="2- Avançado\Pesquisa Binária\" />
+    <Folder Include="2- Avançado\Quick Sort\" />
   </ItemGroup>
 
 </Project>
