exemplo com lista ordenada usando bubble sort

--- a/estrutura-dados-csharp/estrutura-dados-csharp/estrutura-dados-csharp.csproj
+++ b/estrutura-dados-csharp/estrutura-dados-csharp/estrutura-dados-csharp.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="2- Avançado\Merge Sort\" />
+    <Folder Include="2- Avançado\MergeSort\" />
     <Folder Include="2- Avançado\BigO\" />
     <Folder Include="2- Avançado\Dijkstra\" />
     <Folder Include="2- Avançado\Grafos\" />
-    <Folder Include="2- Avançado\Pesquisa Binária\" />
+    <Folder Include="2- Avançado\BubbleSort\" />
+    <Folder Include="2- Avançado\PesquisaBinária\" />
   </ItemGroup>
 
 </Project>
